syntax = "proto3";

package Protos.Dto.Autor.Response;
option csharp_namespace = "TiendaServicios.Contracts.Protos.Dto.Autor.Response";

import "Protos/Models/AutorModel.proto";

message AddAutorResponse
{
	bool success = 1;
	Protos.Models.AutorModel AutorModel = 2;
}
